--- a/css/menu.css
+++ b/css/menu.css
@@ -13,7 +13,7 @@ body {
 
 .mainMenu{
     width: 100%;
-    background-color: #85C1E9;
+    background-color: black;
     height: 120px;
 }
 
@@ -54,6 +54,11 @@ body {
     text-transform: uppercase;
   }
   
+  /* states */
+
+  
+  /* hover animation */
+  
   .menu__link{
     position: relative;
     overflow: hidden;
@@ -92,6 +97,11 @@ body {
     transition-duration: .2s;
   }
   
+  /*
+  =====
+  DEMO
+  =====
+  */
   
   @media (min-width: 768px){
   
