--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,22 @@
 body{
-    background-color: tomato;
+    background-color: orangered;    
+} 
+
+.icons {
+    position: relative;
+    left: 74%;
+    display: inline-flex;
+    margin-top: 30px;
+    list-style: none;       
+
+}
+
+.icon1{
+    margin-left: 10px;
+}
+
+.welcome-text{
+    position: relative;
+    left: 28%;
+    color: white;
 }
