--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 body{
-    background-color: orangered;    
+    background-color: orangered;   
+    width: 100%;
+    height: 2000px;
+    margin: 0 auto; 
 } 
 
 .icons {
@@ -17,6 +20,6 @@ body{
 
 .welcome-text{
     position: relative;
-    left: 28%;
+    margin-left: 28%;
     color: white;
 }
